[package]
name = "equivalence-derive"
version = "0.1.0"
edition = "2021"
authors = ["Jad Ghalayini <jeg74@cl.cam.ac.uk>"]
description = "Implementation of #[derive(Equivalence)]"
repository = "https://github.com/imbrem/equivalence"
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["equivalence", "derive", "hash", "relation"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.69"
darling = "0.14.2"
fnv = "1.0.7"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
