[package]
name = "equivalence"
version = "0.1.0"
edition = "2021"
authors = ["Jad Ghalayini <jeg74@cl.cam.ac.uk>"]
description = "Trait and derive macro for comparing and hashing types modulo an equivalence relation"
repository = "https://github.com/imbrem/equivalence"
license = "BSD0 OR MIT OR Apache-2.0"
keywords = ["equivalence", "derive", "hash", "relation"]
categories = ["data-structures"]
readme = "../README.md"

[dependencies]
either = "1.8.1"
equivalence-derive = { path = "../equivalence-derive", optional = true }

[features]
default = ["derive"]
derive = ["equivalence-derive"]